--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Press+Start+2P&display=swap');
 *{
-  background-color: #faedcd;
+  background-color: #000000;
+  color: #ffffff;
 }
 .Nav{
   font-size:8px;
@@ -111,7 +112,7 @@
 }
 
 .logspan{
-  color:#000000;
+  color:#ffffff;
 }
 
 .scroll{
@@ -346,4 +347,30 @@
 
 .SUUU{
   color: #59DD7E;
+}
+
+
+
+
+.Markit{
+  color: #192252;
+  text-align: center;
+  font-family: 'Press Start 2P';
+  font-size: 16px;
+  transition: 0.3s ease-in-out;
+  padding-bottom: 50px;
+}
+
+
+
+.Markit:hover{
+  
+  text-shadow: 0  0  10px  #192252,
+               0  0  20px    #192252,
+               0  0  40px    #192252,
+               0  0  80px    #192252,
+               0  0  120px    #192252,
+               0  0  160px    #192252;
+
+
 }
